--- a/model-src/processing.ipynb
+++ b/model-src/processing.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "base_path = \"./Bevo-Bud-The-GPT/data\"\n",
+    "base_path = \"./Bevo-Bud-The-GPT/model-src\"\n",
     "with open(f'{base_path}/UTAustin_submissions.json', 'r') as f:\n",
     "    submissions = json.load(f)\n",
     "\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,9 @@
     "def format_reddit_post(submission, comment):\n",
     "    conversation = {\n",
     "        \"messages\": [\n",
-    "            {\"role\": \"system\", \"content\": \"You help answer questions for UT Austin students\"},\n",
-    "            {\"role\": \"user\", \"content\": submission['title'].strip().replace('\\n', '') + \" \" + submission['selftext'].strip().replace('\\n', '')},\n",
-    "            {\"role\": \"assistant\", \"content\": f\"{comment['body']}\"}\n",
+    "            {\"role\": \"system\", \"content\": \"You help answer questions related to the University of Texas at Austin (UT Austin) for prospective and current students, faculty, and staff. Provide accurate and helpful information.\"},\n",
+    "            {\"role\": \"user\", \"content\": submission['title'].strip().replace('\\n', '').replace('/r', '') + \" \" + submission['selftext'].strip().replace('\\n', '').replace('r/', '')},\n",
+    "            {\"role\": \"assistant\", \"content\": comment['body'].strip().replace('\\n', '').replace('/r', '').replace('/u', '')}\n",
     "\n",
     "        ]\n",
     "    }\n",
@@ -99,8 +99,8 @@
     "    com_ids = subs_coms_map[sub_id][\"comments\"]\n",
     "    for com_id in com_ids:\n",
     "        comment = com_ids_map[com_id]\n",
-    "        conversation = {\"question\" : get_question(submission), \"answer\": get_answer(comment)}\n",
-    "        # conversation = format_reddit_post(submission, comment)\n",
+    "        # conversation = {\"question\" : get_question(submission), \"answer\": get_answer(comment)}\n",
+    "        conversation = format_reddit_post(submission, comment)\n",
     "        data.append(conversation)\n"
    ]
   },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +121,22 @@
     "import csv\n",
     "import json\n",
     "\n",
-    "seed = 1\n",
-    "train, test = train_test_split(data, test_size=0.2, random_state=seed)\n",
+    "with open(f\"{base_path}/train-v1.json\", \"w\") as f:\n",
+    "    json.dump(data, f, indent=4)\n",
+    "    \n",
     "\n",
-    "with open(f\"{base_path}/train-v1.csv\", \"w\") as f:\n",
-    "    writeer = csv.DictWriter(f, fieldnames=[\"question\", \"answer\"])\n",
-    "    writeer.writeheader()\n",
-    "    writeer.writerows(train)\n",
+    "# seed = 1\n",
+    "# train, test = train_test_split(data, test_size=0.2, random_state=seed)\n",
     "\n",
-    "with open(f\"{base_path}/test-v1.csv\", \"w\") as f:\n",
-    "    writeer = csv.DictWriter(f, fieldnames=[\"question\", \"answer\"])\n",
-    "    writeer.writeheader()\n",
-    "    writeer.writerows(test)"
+    "# with open(f\"{base_path}/train-v1.csv\", \"w\") as f:\n",
+    "#     writeer = csv.DictWriter(f, fieldnames=[\"question\", \"answer\"])\n",
+    "#     writeer.writeheader()\n",
+    "#     writeer.writerows(train)\n",
+    "\n",
+    "# with open(f\"{base_path}/test-v1.csv\", \"w\") as f:\n",
+    "#     writeer = csv.DictWriter(f, fieldnames=[\"question\", \"answer\"])\n",
+    "#     writeer.writeheader()\n",
+    "#     writeer.writerows(test)"
    ]
   }
  ],
@@ -141,18 +145,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.1"
   }
  },
  "nbformat": 4,
